@@ -62,7 +62,7 @@ extern int   dpx_file_apply_filter (const char *cmdtmpl,
                                    const char *input, const char *output,
                                    unsigned char version);
 extern char *dpx_create_temp_file  (void);
-extern char *dpx_create_fix_temp_file (char *filename);
+extern char *dpx_create_fix_temp_file (const char *filename);
 extern void  dpx_delete_old_cache  (int life);
 extern void  dpx_delete_temp_file  (char *tmp, int force); /* tmp freed here */
 
